# graduate_work

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.kafka.yml  docker-compose.mongo.yml  init_db.sql
admin_panel/: docker-entrypoint.sh  requirements.txt
admin_panel/config/: settings.py
admin_panel/profiles/: admin.py  apps.py  forms.py  models.py  signals.py
admin_panel/uwsgi/: uwsgi.ini  uwsgi_dev.ini
admin_service/: Dockerfile  db.sqlite3  pyproject.toml  start.sh
admin_service/core/: asgi.py  settings.py  urls.py  wsgi.py
admin_service/custom_auth/: admin.py  models.py  routers.py
admin_service/profiles/: admin.py  models.py
admin_service/profiles/fixtures/: admin_user.json
admin_service/profiles/migrations/: 0001_initial.py
alembic/: env.py
app/: Dockerfile  main.py  requirements.txt
app/core/: config.py
app/dependencies/: main.py
app/models/: base_model.py  film.py  genre.py  persons.py
app/services/: base.py  film.py  genres.py  person.py
app/utils/: sentry_hook.py
auth/: Dockerfile  alembic.ini  main.py
auth/alembic/: env.py
auth/core/: config.py  jwt.py  logger.py  logger_config.py  middleware.py  su.py  tracer.py
auth/db/: postgres.py
auth/models/: social.py  users.py
auth/schema/: roles.py  tokens.py  users.py
auth/services/: crud.py  oauth_service.py  roles.py  tokens.py  users.py
auth/utils/: enums.py  permissions.py  sentry_hook.py
auth_service/: Dockerfile  main.py  requirements.txt
auth_service/core/: config.py  jwt.py  middleware.py  tracer.py
auth_service/db/: redis.py
auth_service/models/: users.py
auth_service/schema/: users.py
auth_service/services/: oauth_service.py  roles.py  users.py
auth_service/utils/: exception_handlers.py  pagination.py
django_admin/: Dockerfile
django_admin/app/: docker-entrypoint.sh  requirements.txt
etl/: dump.sql  movies.sh  tox.ini
etl/postgres_to_es/: Dockerfile  backoff.py  config.py  connection.py  data_transform.py  load_data.py  log_config.yaml  requirements.txt  (+1 more)
file_api/: Dockerfile  main.py  requirements.txt
movie_service/: Dockerfile  alembic.ini  main.py  requirements.txt
nginx/: nginx.conf
profile_service/: Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
rate_limit/: Dockerfile  main.py  requirements.txt
(+122 files in other folders)
