[tool.poetry]
name = "signals"
version = "0.1.0"
description = ""
authors = ["DoskhanStybayev <dosxana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
djangorestframework = "^3.14.0"
gunicorn = "20.1.0"
python-dotenv = "^1.0.0"
django-filter = "^22.1"
psycopg2-binary = "2.9.9"
requests = "^2.29.0"
jsonfield = "^3.1.0"
pytest = "^7.3.1"
pytest-django = "4.5.2"
requests-mock = "^1.10.0"
flake8-html = "^0.4.3"
python-logstash = "^0.4.8"
boto3 = "1.26.159"
django-celery-beat = "2.4.0"
django-celery-results = "2.5.1"
django-cors-headers = "3.13.0"
django-phonenumber-field = "7.1.0"
django-redis = "5.3.0"
django-storages = "1.13.2"
django-user-agents = "0.4.0"
djangorestframework-simplejwt = "5.3.1"
faker = "14.1.0"
firebase-admin = "6.2.0"
flower = "1.2.0"
grpcio-status = "1.56.2"
mock = "4.0.3"
moto = "5.0.9"
newrelic = "8.8.0"
pdfplumber = "0.10.2"
phonenumbers = "8.13.13"
pip = "23.2.1"
pipdeptree = "2.13.0"
plotly = "5.15.0"
pycountry = "22.3.5"
pymupdf = "^1.24.9"
pymupdf-fonts = "1.0.5"
pyopenssl = "23.1.1"
service-identity = "21.1.0"
sseclient-py = "1.7.2"
supervisor = "4.2.5"
wheel = "0.40.0"
drf-yasg = "^1.21.7"
channels = "^4.0.0"
channels-redis = "^4.1.0"
djangochannelsrestframework = "^1.1.0"
responses = "^0.23.3"
daphne = "^4.0.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
amqp = "^5.1.1"
django-mptt = "^0.15.0"
django-split-settings = "^1.2.0"
asyncpg = "^0.29.0"
py-spy = "^0.3.14"
django-prometheus = "2.3.1"
grpcio = "^1.65.4"
dependency-injector2 = "^4.41.1"
alpaca-py = "0.28.1"
polygon-api-client = "^1.14.2"
alpaca-trade-api = "3.2.0"
sentry-sdk = "^2.13.0"
pymongo = "^4.8.0"
uvicorn = "^0.32.0"
django-silk = "5.2.0"
pika = "^1.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"
black = "20.8b1"
isort = "^4.3.21"
flake8 = "^3.7.9"
autoflake = "^1.3.1"
ipython = "7.19.0"
pyflakes = ">=2.3.0,<2.4.0"
rich = "^13.3.5"
celery-singleton = "0.3.1"

[tool.poetry.group.dev.dependencies]
pytest-xdist = "^3.6.1"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"